k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  labels:
    app: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - port: 8080
      targetPort: 8080
